Modifying Medical Assistance (cirm model/poco; MedicalAssistance ctrl; cirm/mdeivac html); add(pv patient/vessel/voyage/weather details); cirmJS

--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -1444,6 +1444,8 @@
     <Content Include="Views\MedicalAssistance\MediVac_PatientDeatils.cshtml" />
     <Content Include="Views\Shared\_pvPatientDetails.cshtml" />
     <Content Include="Views\Shared\_pvVesselDetails.cshtml" />
+    <Content Include="Views\Shared\_pvVoyageDetails.cshtml" />
+    <Content Include="Views\Shared\_pvWeatherDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
