--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\MailServerDetailsController.cs" />
     <Compile Include="Controllers\MedicalAssistanceController.cs" />
+    <Compile Include="Controllers\MedicalChestController.cs" />
     <Compile Include="Controllers\MvcExtensions.cs" />
     <Compile Include="Controllers\OptionsController.cs" />
     <Compile Include="Controllers\PlansController.cs" />
@@ -207,6 +208,7 @@
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\ManageRank.cs" />
     <Compile Include="Models\ManageRankViewModel.cs" />
+    <Compile Include="Models\MedicalChest.cs" />
     <Compile Include="Models\MedicalSymtomology.cs" />
     <Compile Include="Models\OneDayTimeAdjustment.cs" />
     <Compile Include="Models\Options.cs" />
@@ -1230,6 +1232,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\Login.js" />
     <Content Include="Scripts\MailCIRM.js" />
+    <Content Include="Scripts\MedicalChest.js" />
     <Content Include="Scripts\Medicine.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
@@ -1449,6 +1452,7 @@
     <Content Include="Views\Rights\Index.cshtml" />
     <Content Include="Views\Shared\_pvVoyageDetails.cshtml" />
     <Content Include="Views\Shared\_pvWeatherDetails.cshtml" />
+    <Content Include="Views\MedicalChest\MedicalChestCertificate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
