--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -162,6 +162,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\TraceFilterAttribute.cs" />
     <Compile Include="Controllers\AddCrewController.cs" />
+    <Compile Include="Controllers\AllowMultipleButtonAttribute.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\CompanyDetailsController.cs" />
     <Compile Include="Controllers\CrewHealthController.cs" />
@@ -652,6 +653,7 @@
     <Content Include="devsqlscripts\17-01-2022 resthoursclient Full script.sql" />
     <Content Include="devsqlscripts\22-01-2022 resthoursclient Full script.sql" />
     <Content Include="devsqlscripts\27-01-2022 resthoursclient Full script.sql" />
+    <Content Include="devsqlscripts\28-01-2022 resthoursclient Full script.sql" />
     <Content Include="devsqlscripts\Worth_SQL_Script_Full_12.03.2021.sql" />
     <Content Include="devsqlscripts\Worth_SQL_Script_Initial_04.03.2021.sql" />
     <Content Include="devsqlscripts\Worth_SQL_Script_Initial_17.03.2021.sql" />
@@ -1322,6 +1324,7 @@
     <Content Include="sqlscripts\17-01-2022 resthoursclient Full script.sql" />
     <Content Include="sqlscripts\22-01-2022 resthoursclient Full script.sql" />
     <Content Include="sqlscripts\27-01-2022 resthoursclient Full script.sql" />
+    <Content Include="sqlscripts\28-01-2022 resthoursclient Full script.sql" />
     <Content Include="sqlscripts\Worth_SQL_Script_Full_12.03.2021.sql" />
     <Content Include="sqlscripts\Worth_SQL_Script_Full_18.12.2021%28usk%29.sql" />
     <Content Include="sqlscripts\Worth_SQL_Script_Initial_04.03.2021.sql" />
