--- a/TM.RestHour.DAL/TM.RestHour.DAL.csproj
+++ b/TM.RestHour.DAL/TM.RestHour.DAL.csproj
@@ -65,6 +65,7 @@
     <Compile Include="MedicalChestDAL.cs" />
     <Compile Include="NonComplianceInfoDAL.cs" />
     <Compile Include="OptionsDAL.cs" />
+    <Compile Include="OvertimeCalculationDAL.cs" />
     <Compile Include="PermissionsDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PsychologicalEvaluationDAL.cs" />
