--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -657,6 +657,7 @@
     <Content Include="devsqlscripts\22-01-2022 resthoursclient Full script.sql" />
     <Content Include="devsqlscripts\27-01-2022 resthoursclient Full script.sql" />
     <Content Include="devsqlscripts\28-01-2022 resthoursclient Full script.sql" />
+    <Content Include="devsqlscripts\29-01-2022 resthoursclient Full script.sql" />
     <Content Include="devsqlscripts\Worth_SQL_Script_Full_12.03.2021.sql" />
     <Content Include="devsqlscripts\Worth_SQL_Script_Initial_04.03.2021.sql" />
     <Content Include="devsqlscripts\Worth_SQL_Script_Initial_17.03.2021.sql" />
@@ -1330,6 +1331,7 @@
     <Content Include="sqlscripts\22-01-2022 resthoursclient Full script.sql" />
     <Content Include="sqlscripts\27-01-2022 resthoursclient Full script.sql" />
     <Content Include="sqlscripts\28-01-2022 resthoursclient Full script.sql" />
+    <Content Include="sqlscripts\29-01-2022 resthoursclient Full script.sql" />
     <Content Include="sqlscripts\Worth_SQL_Script_Full_12.03.2021.sql" />
     <Content Include="sqlscripts\Worth_SQL_Script_Full_18.12.2021%28usk%29.sql" />
     <Content Include="sqlscripts\Worth_SQL_Script_Initial_04.03.2021.sql" />
