--- a/TM.RestHour/packages.config
+++ b/TM.RestHour/packages.config
@@ -8,6 +8,7 @@
   <package id="EPPlus" version="5.2.0" targetFramework="net472" />
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net472" />
   <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net472" />
+  <package id="FontAwesome" version="4.7.0" targetFramework="net48" />
   <package id="Ionic.Zip" version="1.9.1.8" targetFramework="net472" />
   <package id="jQuery" version="3.6.0" targetFramework="net472" />
   <package id="jquery.datatables" version="1.10.15" targetFramework="net472" />
