--- a/TM.RestHour/Web.config
+++ b/TM.RestHour/Web.config
@@ -11,12 +11,12 @@
   </configSections>
   <connectionStrings>
     <!--<add name="RestHourDBConnectionString" connectionString="Server=DHEEMAN\HOME;Database=resthoursclient;User Id=sa;Password=sa1234;Trusted_Connection=False;"/>-->
-    <!--<add name="RestHourDBConnectionString" connectionString="Server=LAPTOP-U2CV3DFQ\BINSQLSERVER;Database=resthoursclientNew;User Id=sa;Password=binb1234;Trusted_Connection=False;" />-->
+    <add name="RestHourDBConnectionString" connectionString="Server=LAPTOP-U2CV3DFQ\BINSQLSERVER;Database=resthoursclientNew;User Id=sa;Password=binb1234;Trusted_Connection=False;" />
     <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-53QOB66\BINSQLSERVER;Database=resthoursclient;User Id=sa;Password=binb1234;Trusted_Connection=False;" />-->
     <!--<add name="RestHourDBConnectionString" connectionString="Server=LAPTOP-BH78F1Q4\WORK;Database=resthoursclient;User Id=sa;Password=sa1234;Trusted_Connection=False;" />-->
     <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\SQLEXPRESS;Database=resthoursclient;User Id=sa;Password=12345;Trusted_Connection=False;" />-->
     <!--<add name="RestHourDBConnectionString" connectionString="Server=PC\SQLEXPRESS;Database=resthoursclient;User Id=sa;Password=12345;Trusted_Connection=False;" />-->
-    <add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\SQLEXPRESS;Database=resthoursclient_uskDataAndCurrentSchema;User Id=sa;Password=12345;Trusted_Connection=False;"/>
+    <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\SQLEXPRESS;Database=resthoursclient_uskDataAndCurrentSchema;User Id=sa;Password=12345;Trusted_Connection=False;"/>-->
   </connectionStrings>
   <!--<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <targets>
