--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -178,6 +178,7 @@
     <Compile Include="Controllers\MailServerDetailsController.cs" />
     <Compile Include="Controllers\MedicalAssistanceController.cs" />
     <Compile Include="Controllers\MedicalChestController.cs" />
+    <Compile Include="Controllers\MentalHealthController.cs" />
     <Compile Include="Controllers\MvcExtensions.cs" />
     <Compile Include="Controllers\OptionsController.cs" />
     <Compile Include="Controllers\OvertimeCalculationController.cs" />
@@ -187,6 +188,7 @@
     <Compile Include="Controllers\ReportsController.cs" />
     <Compile Include="Controllers\ReportsNCReportByMonthController.cs" />
     <Compile Include="Controllers\RightsController.cs" />
+    <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Controllers\TestGRDController.cs" />
     <Compile Include="Controllers\TimeSheetController.cs" />
     <Compile Include="Controllers\VesselController.cs" />
@@ -658,10 +660,12 @@
     <Content Include="css\metisMenu.css" />
     <Content Include="css\popuo-box.css" />
     <Content Include="css\preloader.html" />
+    <Content Include="css\redioBtn.css" />
     <Content Include="css\style.css" />
     <Content Include="devsqlscripts\01-02-2022 resthoursclient Full script.sql" />
     <Content Include="devsqlscripts\02-02-2022 resthoursclient Full script.sql" />
     <Content Include="devsqlscripts\03-02-2022 resthoursclient Full script.sql" />
+    <Content Include="devsqlscripts\04-02-2022 resthoursclient Full script.sql" />
     <Content Include="devsqlscripts\17-01-2022 resthoursclient Full script.sql" />
     <Content Include="devsqlscripts\22-01-2022 resthoursclient Full script.sql" />
     <Content Include="devsqlscripts\27-01-2022 resthoursclient Full script.sql" />
@@ -1289,6 +1293,7 @@
     <Content Include="sqlscripts\02-02-2022 resthoursclient Full script.sql" />
     <Content Include="sqlscripts\03-02-2022 resthoursclient Full script.sql" />
     <Content Include="sqlscripts\03-UpdateDB\01-UpdateDB.sql" />
+    <Content Include="sqlscripts\04-02-2022 resthoursclient Full script.sql" />
     <Content Include="sqlscripts\04-CreateFunction\ufn_CSVToTable.sql" />
     <Content Include="sqlscripts\07-DefaultMasterData\DefaultMasterData_RestHour.sql" />
     <Content Include="sqlscripts\09-Create-SPs\dbo.name.StoredProcedure.sql" />
@@ -1496,6 +1501,9 @@
     <Content Include="Views\CrewList\CrewListNew_bingshu.cshtml" />
     <Content Include="Views\CreateNewUserAccount\Index.cshtml" />
     <Content Include="Views\WellBeing\MonthlyWorkHours.cshtml" />
+    <Content Include="Views\Test\Index.cshtml" />
+    <Content Include="Views\MentalHealth\Index.cshtml" />
+    <Content Include="Views\MentalHealth\PsychologicalEvaluationForms.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
