--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -20,8 +20,7 @@
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
-    <IISExpressSSLPort>
-    </IISExpressSSLPort>
+    <IISExpressSSLPort>44376</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
@@ -185,6 +184,7 @@
     <Compile Include="Controllers\MvcExtensions.cs" />
     <Compile Include="Controllers\OptionsController.cs" />
     <Compile Include="Controllers\OvertimeCalculationController.cs" />
+    <Compile Include="Controllers\PlanController.cs" />
     <Compile Include="Controllers\PlansController.cs" />
     <Compile Include="Controllers\PsychologicalEvaluationController.cs" />
     <Compile Include="Controllers\RegimeController.cs" />
@@ -225,6 +225,8 @@
     <Compile Include="Models\Options.cs" />
     <Compile Include="Models\OvertimeCalculation.cs" />
     <Compile Include="Models\Permissions.cs" />
+    <Compile Include="Models\Plan.cs" />
+    <Compile Include="Models\PlanCategoryVM.cs" />
     <Compile Include="Models\RankPermission.cs" />
     <Compile Include="Models\Ranks.cs" />
     <Compile Include="Models\RanksViewModel.cs" />
@@ -1277,6 +1279,7 @@
     <Content Include="Scripts\Options.js" />
     <Content Include="Scripts\OvertimeCalculation.js" />
     <Content Include="Scripts\pdfmake.min.js" />
+    <Content Include="Scripts\Plan.js" />
     <Content Include="Scripts\PsychologicalEvaluation.js" />
     <Content Include="Scripts\Ranks.js" />
     <Content Include="Scripts\Regimes.js" />
@@ -1516,6 +1519,7 @@
     <Content Include="Views\Shared\_pvZhao_ANXIETY_Y1.cshtml" />
     <Content Include="Views\Shared\_pvZhao_ANXIETY_Y2.cshtml" />
     <Content Include="Views\MentalHealth\PsychologicalEvaluationScore.cshtml" />
+    <Content Include="Views\Plan\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
