--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -675,6 +675,7 @@
     <Content Include="devsqlscripts\07-02-2022 resthoursclient Full script.sql" />
     <Content Include="devsqlscripts\11-02-2022 resthoursclient Full script.sql" />
     <Content Include="devsqlscripts\11-02-2022 resthoursclient Full script_II.sql" />
+    <Content Include="devsqlscripts\14-02-2022 resthoursclient Full script.sql" />
     <Content Include="devsqlscripts\17-01-2022 resthoursclient Full script.sql" />
     <Content Include="devsqlscripts\22-01-2022 resthoursclient Full script.sql" />
     <Content Include="devsqlscripts\27-01-2022 resthoursclient Full script.sql" />
@@ -1373,6 +1374,7 @@
     <Content Include="sqlscripts\09-Create-SPs\dbo.usp_GetAllUsersForDrp.StoredProcedure.sql" />
     <Content Include="sqlscripts\11-02-2022 resthoursclient Full script.sql" />
     <Content Include="sqlscripts\11-02-2022 resthoursclient Full script_II.sql" />
+    <Content Include="sqlscripts\14-02-2022 resthoursclient Full script.sql" />
     <Content Include="sqlscripts\17-01-2022 resthoursclient Full script.sql" />
     <Content Include="sqlscripts\22-01-2022 resthoursclient Full script.sql" />
     <Content Include="sqlscripts\27-01-2022 resthoursclient Full script.sql" />
