--- a/TM.RestHour/Web.config
+++ b/TM.RestHour/Web.config
@@ -58,6 +58,8 @@
     <add key="MedicalChestImagesPath" value="../MedicalChestImages/" />
     <!--**Added on 27th Jan 2022*******-->
     <add key="JoiningMedicalUploadPath" value="../JoiningMedical/" />
+    <!--**Added on 22nd Feb 2022*******-->
+    <add key="PrescribedMedicineUploadPath" value="../PrescribedMedicineImages/" />
     <add key="MedicineAvailableOnBoardUploadPath" value="../MedicineAvailableOnBoard/" />
     <add key="MedicalEquipmentOnBoardUploadPath" value="../MedicalEquipmentOnBoard/" />
     <add key="MedicalHistoryUploadUploadPath" value="../MedicalHistoryUpload/" />
